2025-08 cleanup and speedup

--- a/2025/day4.ipynb
+++ b/2025/day4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "3ff89099",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "34b666ff",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "18e7d52c",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
     "# field = random_field\n",
     "\n",
     "all_reachable = set()\n",
-    "MAX_ITERATIONS = 100\n",
+    "MAX_ITERATIONS = 1_000\n",
     "for i in range(MAX_ITERATIONS):\n",
     "    all_fields.append(field.copy())\n",
     "    if i % 10 == 0:\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "5cdd5116",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "25566a26",
    "metadata": {},
    "outputs": [
@@ -336,42 +336,42 @@
        "</style>\n",
        "\n",
        "<div class=\"animation\">\n",
-       "  <img id=\"_anim_img7b4706abf92a45b98dd6970ffd24904e\">\n",
+       "  <img id=\"_anim_imgda9687eb64514ce7869f80c74758e4df\">\n",
        "  <div class=\"anim-controls\">\n",
-       "    <input id=\"_anim_slider7b4706abf92a45b98dd6970ffd24904e\" type=\"range\" class=\"anim-slider\"\n",
+       "    <input id=\"_anim_sliderda9687eb64514ce7869f80c74758e4df\" type=\"range\" class=\"anim-slider\"\n",
        "           name=\"points\" min=\"0\" max=\"1\" step=\"1\" value=\"0\"\n",
-       "           oninput=\"anim7b4706abf92a45b98dd6970ffd24904e.set_frame(parseInt(this.value));\">\n",
+       "           oninput=\"animda9687eb64514ce7869f80c74758e4df.set_frame(parseInt(this.value));\">\n",
        "    <div class=\"anim-buttons\">\n",
-       "      <button title=\"Decrease speed\" aria-label=\"Decrease speed\" onclick=\"anim7b4706abf92a45b98dd6970ffd24904e.slower()\">\n",
+       "      <button title=\"Decrease speed\" aria-label=\"Decrease speed\" onclick=\"animda9687eb64514ce7869f80c74758e4df.slower()\">\n",
        "          <i class=\"fa fa-minus\"></i></button>\n",
-       "      <button title=\"First frame\" aria-label=\"First frame\" onclick=\"anim7b4706abf92a45b98dd6970ffd24904e.first_frame()\">\n",
+       "      <button title=\"First frame\" aria-label=\"First frame\" onclick=\"animda9687eb64514ce7869f80c74758e4df.first_frame()\">\n",
        "        <i class=\"fa fa-fast-backward\"></i></button>\n",
-       "      <button title=\"Previous frame\" aria-label=\"Previous frame\" onclick=\"anim7b4706abf92a45b98dd6970ffd24904e.previous_frame()\">\n",
+       "      <button title=\"Previous frame\" aria-label=\"Previous frame\" onclick=\"animda9687eb64514ce7869f80c74758e4df.previous_frame()\">\n",
        "          <i class=\"fa fa-step-backward\"></i></button>\n",
-       "      <button title=\"Play backwards\" aria-label=\"Play backwards\" onclick=\"anim7b4706abf92a45b98dd6970ffd24904e.reverse_animation()\">\n",
+       "      <button title=\"Play backwards\" aria-label=\"Play backwards\" onclick=\"animda9687eb64514ce7869f80c74758e4df.reverse_animation()\">\n",
        "          <i class=\"fa fa-play fa-flip-horizontal\"></i></button>\n",
-       "      <button title=\"Pause\" aria-label=\"Pause\" onclick=\"anim7b4706abf92a45b98dd6970ffd24904e.pause_animation()\">\n",
+       "      <button title=\"Pause\" aria-label=\"Pause\" onclick=\"animda9687eb64514ce7869f80c74758e4df.pause_animation()\">\n",
        "          <i class=\"fa fa-pause\"></i></button>\n",
-       "      <button title=\"Play\" aria-label=\"Play\" onclick=\"anim7b4706abf92a45b98dd6970ffd24904e.play_animation()\">\n",
+       "      <button title=\"Play\" aria-label=\"Play\" onclick=\"animda9687eb64514ce7869f80c74758e4df.play_animation()\">\n",
        "          <i class=\"fa fa-play\"></i></button>\n",
-       "      <button title=\"Next frame\" aria-label=\"Next frame\" onclick=\"anim7b4706abf92a45b98dd6970ffd24904e.next_frame()\">\n",
+       "      <button title=\"Next frame\" aria-label=\"Next frame\" onclick=\"animda9687eb64514ce7869f80c74758e4df.next_frame()\">\n",
        "          <i class=\"fa fa-step-forward\"></i></button>\n",
-       "      <button title=\"Last frame\" aria-label=\"Last frame\" onclick=\"anim7b4706abf92a45b98dd6970ffd24904e.last_frame()\">\n",
+       "      <button title=\"Last frame\" aria-label=\"Last frame\" onclick=\"animda9687eb64514ce7869f80c74758e4df.last_frame()\">\n",
        "          <i class=\"fa fa-fast-forward\"></i></button>\n",
-       "      <button title=\"Increase speed\" aria-label=\"Increase speed\" onclick=\"anim7b4706abf92a45b98dd6970ffd24904e.faster()\">\n",
+       "      <button title=\"Increase speed\" aria-label=\"Increase speed\" onclick=\"animda9687eb64514ce7869f80c74758e4df.faster()\">\n",
        "          <i class=\"fa fa-plus\"></i></button>\n",
        "    </div>\n",
-       "    <form title=\"Repetition mode\" aria-label=\"Repetition mode\" action=\"#n\" name=\"_anim_loop_select7b4706abf92a45b98dd6970ffd24904e\"\n",
+       "    <form title=\"Repetition mode\" aria-label=\"Repetition mode\" action=\"#n\" name=\"_anim_loop_selectda9687eb64514ce7869f80c74758e4df\"\n",
        "          class=\"anim-state\">\n",
-       "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_7b4706abf92a45b98dd6970ffd24904e\"\n",
+       "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_da9687eb64514ce7869f80c74758e4df\"\n",
        "             >\n",
-       "      <label for=\"_anim_radio1_7b4706abf92a45b98dd6970ffd24904e\">Once</label>\n",
-       "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_7b4706abf92a45b98dd6970ffd24904e\"\n",
+       "      <label for=\"_anim_radio1_da9687eb64514ce7869f80c74758e4df\">Once</label>\n",
+       "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_da9687eb64514ce7869f80c74758e4df\"\n",
        "             checked>\n",
-       "      <label for=\"_anim_radio2_7b4706abf92a45b98dd6970ffd24904e\">Loop</label>\n",
-       "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_7b4706abf92a45b98dd6970ffd24904e\"\n",
+       "      <label for=\"_anim_radio2_da9687eb64514ce7869f80c74758e4df\">Loop</label>\n",
+       "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_da9687eb64514ce7869f80c74758e4df\"\n",
        "             >\n",
-       "      <label for=\"_anim_radio3_7b4706abf92a45b98dd6970ffd24904e\">Reflect</label>\n",
+       "      <label for=\"_anim_radio3_da9687eb64514ce7869f80c74758e4df\">Reflect</label>\n",
        "    </form>\n",
        "  </div>\n",
        "</div>\n",
@@ -381,9 +381,9 @@
        "  /* Instantiate the Animation class. */\n",
        "  /* The IDs given should match those used in the template above. */\n",
        "  (function() {\n",
-       "    var img_id = \"_anim_img7b4706abf92a45b98dd6970ffd24904e\";\n",
-       "    var slider_id = \"_anim_slider7b4706abf92a45b98dd6970ffd24904e\";\n",
-       "    var loop_select_id = \"_anim_loop_select7b4706abf92a45b98dd6970ffd24904e\";\n",
+       "    var img_id = \"_anim_imgda9687eb64514ce7869f80c74758e4df\";\n",
+       "    var slider_id = \"_anim_sliderda9687eb64514ce7869f80c74758e4df\";\n",
+       "    var loop_select_id = \"_anim_loop_selectda9687eb64514ce7869f80c74758e4df\";\n",
        "    var frames = new Array(49);\n",
        "    \n",
        "  frames[0] = \"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAA+gAAAPoCAYAAABNo9TkAAAAOXRFWHRTb2Z0d2FyZQBNYXRwbG90\\\n",
@@ -12451,7 +12451,7 @@
        "    /* set a timeout to make sure all the above elements are created before\n",
        "       the object is initialized. */\n",
        "    setTimeout(function() {\n",
-       "        anim7b4706abf92a45b98dd6970ffd24904e = new Animation(frames, img_id, slider_id, 200.0,\n",
+       "        animda9687eb64514ce7869f80c74758e4df = new Animation(frames, img_id, slider_id, 200.0,\n",
        "                                 loop_select_id);\n",
        "    }, 0);\n",
        "  })()\n",
@@ -12461,7 +12461,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12489,12 +12489,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "06901910",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ani.save('animation_random.gif', writer='pillow', fps=5)"
+    "ani.save('animation_hard.gif', writer='pillow', fps=20)\n"
    ]
   }
  ],
